changed the get client end point
